# ipad-as-tablet

./: .gitignore  Doxyfile
.github/workflows/: ci.yaml
docs/: README.md  architecture.md  protocol.md
ios/App/: ContentView.swift  TabletInputApp.swift
ios/TabletInput/App/: ContentView.swift  TabletInputApp.swift
ios/TabletInput/Config/: ConnectionConfig.swift
ios/TabletInput/Input/: PacketLogger.swift
ios/TabletInput/Input/Gesture/: PencilInteractionHandler.swift
ios/TabletInput/Input/Mode/: InputMode.swift  InputModeController.swift
ios/TabletInput/Network/: BonjourDiscoveryService.swift  NetworkEndpoint.swift  TransportClient.swift  UDPSender.swift
ios/TabletInput/UI/: CanvasView.swift
ios/UI/: CanvasView.swift
ios/ipad-as-tablet.xcodeproj/: project.pbxproj
ios/ipad-as-tablet.xcodeproj/project.xcworkspace/xcuserdata/bill.xcuserdatad/: UserInterfaceState.xcuserstate
ios/ipad-as-tablet.xcodeproj/xcuserdata/bill.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/ipad-as-tabletTests/: ipad_as_tabletTests.swift
ios/ipad-as-tabletUITests/: ipad_as_tabletUITests.swift  ipad_as_tabletUITestsLaunchTests.swift
pc/: CMakeLists.txt
pc/cmake/: Compiler.cmake  Dependencies.cmake
pc/include/: CMakeLists.txt  input.h  mapper.h  types.h
pc/include/config/: CMakeLists.txt  pipeline_config.h  screen_info.h
pc/include/input/: CMakeLists.txt
pc/include/input/pipeline/: CMakeLists.txt  input_pipeline.h
pc/include/input/pipeline/stages/: aspect.h  clamp.h  display.h  subregion.h
pc/include/input/transport/: CMakeLists.txt  packet_adapter.h  udp_receiver.h
pc/include/math/: CMakeLists.txt  vec2.h
pc/include/output/: CMakeLists.txt  mouse_controller.h
pc/include/pipeline/: input_pipeline.h
pc/include/pipeline/stages/: CMakeLists.txt  aspect.h  clamp.h  display.h  subregion.h
pc/include/transport/: packet_adapter.h  udp_receiver.h
pc/include/types/: CMakeLists.txt  input_packet.h  normalized_point.h  screen_info.h  screen_point.h
pc/src/: CMakeLists.txt  input.cpp  main.cpp  mapper.cpp
pc/src/config/: CMakeLists.txt  pipeline_config.cpp  screen_info.cpp
pc/src/input/: CMakeLists.txt
pc/src/input/pipeline/: CMakeLists.txt  input_pipeline.cpp
pc/src/input/pipeline/stages/: CMakeLists.txt  aspect.cpp  clamp.cpp  display.cpp  subregion.cpp
pc/src/input/transport/: packet_adapter.cpp  udp_receiver.cpp
pc/src/math/: CMakeLists.txt  vec2.cpp
pc/src/output/: CMakeLists.txt  mouse_controller.cpp
pc/src/pipeline/: input_pipeline.cpp
pc/src/pipeline/stages/: aspect.cpp  clamp.cpp  display.cpp  subregion.cpp
pc/src/transport/: CMakeLists.txt  packet_adapter.cpp  udp_receiver.cpp
pc/src/types/: CMakeLists.txt  normalized_point.cpp  screen_point.cpp
pc/tests/: CMakeLists.txt  test_mapper.cpp  test_math_vec2.cpp  test_packet_adapter.cpp  test_pipeline_input_pipeline.cpp  test_pipeline_stages_aspect.cpp  test_pipeline_stages_clamp.cpp  test_pipeline_stages_display.cpp  test_pipeline_stages_subregion.cpp  test_raw_packet.cpp
pc/tests/utils/: test_utils.h
shared/: protocol.h  protocol.swift
tools/: simulator.py
